--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,21 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
+    buildToolsVersion = '27.0.1'
     defaultConfig {
         applicationId "xyz.leezoom.leancloudtest"
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 27
+        versionCode 2
+        versionName "0.$versionCode"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -33,12 +36,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'cn.leancloud.android:avoscloud-sdk:v4.6.1'
 
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'androidx.core:core-ktx:0.1'
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.github.daniel-stoneuk:material-about-library:2.2.3-support27.0.2'
+    implementation 'com.mikepenz:iconics-core:3.0.2@aar'
+    implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
 
-    compile 'cn.leancloud.android:avoscloud-sdk:v4.6.1'
+    implementation project(':androidutilcode')
 
     testImplementation 'junit:junit:4.12'
 }
