--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="xyz.leezoom.cloudmemo">
 
     <!-- 基础模块（必须加入以下声明）START -->
@@ -11,22 +12,32 @@
 
     <!-- 基础模块 END -->
     <application
-        android:name="xyz.leezoom.cloudmemo.App"
+        android:name=".App"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="xyz.leezoom.cloudmemo.memolist.ListActivity" />
-        <activity android:name="xyz.leezoom.cloudmemo.login.LoginActivity">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".memolist.ListActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".login.LoginActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="xyz.leezoom.cloudmemo.addmemo.EditAddActivity" />
+        <activity
+            android:name=".addmemo.EditAddActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AboutActivity"
+            android:theme="@style/AppTheme.DarkActionBar"/>
     </application>
 
 </manifest>
