--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.10'
+    ext.anko_version='0.10.4'
     repositories {
         google()
         jcenter()
@@ -25,7 +26,7 @@ allprojects {
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/public"
         }
-
+        maven { url 'https://jitpack.io' }
     }
 }
 
