--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
     compileSdkVersion 27
     buildToolsVersion = '27.0.1'
     defaultConfig {
-        applicationId "xyz.leezoom.leancloudtest"
+        applicationId "xyz.leezoom.cloudmemo"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 2
+        versionCode 4
         versionName "0.$versionCode"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -38,15 +38,18 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
-    implementation 'cn.leancloud.android:avoscloud-sdk:v4.6.1'
 
     implementation 'androidx.core:core-ktx:0.1'
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.github.daniel-stoneuk:material-about-library:2.2.3-support27.0.2'
     implementation 'com.mikepenz:iconics-core:3.0.2@aar'
     implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
+    implementation 'cat.ereza:customactivityoncrash:2.2.0'
 
+    implementation 'cn.leancloud.android:avoscloud-statistics:v4.6.4'
+    implementation 'cn.leancloud.android:avoscloud-sdk:v4.6.1'
     implementation project(':androidutilcode')
 
     testImplementation 'junit:junit:4.12'
+
 }
